feat: add the possibility to delete the loaded model files (#392)
